--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ nav ul li a.active {
     margin-right: 8px;
 }
 
-/* tombol */
+/* tombol umum */
 .btn {
     display: flex;
     align-items: center;
@@ -113,7 +113,7 @@ nav ul li a.active {
     margin-right: 10px;
 }
 
-/* isi */
+/* isi landing */
 .isi {
     margin-top: 14%;
     color: #fff;
