--- a/style.css
+++ b/style.css
@@ -278,3 +278,39 @@ nav ul li a.active {
   font-weight: 600;
   margin-top: 10px;
 }
+
+/* hamburger tombol */
+.menu-toggle {
+  display: none;
+  font-size: 26px;
+  color: #fff;
+  cursor: pointer;
+}
+
+/* mobile nav */
+@media (max-width: 768px) {
+  nav ul {
+    display: none;
+    position: absolute;
+    top: 70px;
+    right: 8%;
+    background: rgba(0,0,0,0.9);
+    flex-direction: column;
+    width: 220px;
+    border-radius: 8px;
+    padding: 15px;
+    z-index: 1000;
+  }
+
+  nav ul.show {
+    display: flex;
+  }
+
+  nav ul li {
+    margin: 10px 0;
+  }
+
+  .menu-toggle {
+    display: block;
+  }
+}
